# pbip-mcp

./: .gitignore  PRD.md  README.md  main.py  pbip_mcp_launcher.py  pyproject.toml
TestReport/TestCalcGroups.Report/: .platform  definition.pbir
TestReport/TestCalcGroups.Report/definition/pages/: pages.json
TestReport/TestCalcGroups.Report/definition/pages/564287acd3b5d2bb531d/: page.json
TestReport/TestCalcGroups.Report/definition/pages/564287acd3b5d2bb531d/visuals/c787416dec05fc297bf4/: visual.json
TestReport/TestCalcGroups.SemanticModel/: diagramLayout.json
TestReport/TestCalcGroups.SemanticModel/definition/: relationships.tmdl
TestReport/TestCalcGroups.SemanticModel/definition/tables/: Fact.tmdl  LocalDateTable_26818a28-2e45-4734-83ad-c32aa92d15d9.tmdl  Month.tmdl
src/pbip_mcp/: __init__.py  models.py  server.py
src/pbip_mcp/managers/: __init__.py
src/pbip_mcp/operations/: __init__.py  base.py  columns.py  measures.py  relationships.py  tables.py
src/pbip_mcp/parsers/: __init__.py  project_parser.py  tmdl_parser.py
src/pbip_mcp/writers/: __init__.py  tmdl_writer.py
tests/: __init__.py  conftest.py  test_project_parser.py  test_server.py
tests/fixtures/pbip_project/: TestCalcGroups.pbip
tests/fixtures/pbip_project/TestCalcGroups.SemanticModel/.pbi/: cache.abf  localSettings.json
tests/fixtures/pbip_project/TestCalcGroups.SemanticModel/definition/: model.tmdl
tests/fixtures/pbip_project/TestCalcGroups.SemanticModel/definition/tables/: DateTableTemplate_d590ddbc-c002-4bfd-b5d1-24a4366dfe16.tmdl  MetricName.tmdl
tests/fixtures/standalone_semantic_model/TestCalcGroups.SemanticModel/: .platform
tests/fixtures/standalone_semantic_model/TestCalcGroups.SemanticModel/definition/tables/: Fact.tmdl
tests/test_operations/: __init__.py  test_columns.py  test_measures.py  test_relationships.py  test_tables.py
