[project]
name = "pbip-mcp-server"
version = "0.1.0"
description = "Power BI Project MCP Server for local editing of PBIP files"
authors = [
    {name = "PBI MCP Team", email = "team@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["powerbi", "mcp", "pbip", "business-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core MCP and validation - latest versions
    "mcp[cli]>=1.0.0",
    "pydantic>=2.11.0",
    "jsonschema>=4.0.0",
    
    # File processing and utilities
    "charset-normalizer>=3.0.0",
    "python-dateutil>=2.8.0",
    
    # Optional features
    "click>=8.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
pbip-mcp = "pbip_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-org/pbip-mcp-server"
Repository = "https://github.com/your-org/pbip-mcp-server.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbip_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
